--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
     "pytest>=8.4.2",
-    "typer>=0.19"
+    "typer>=0.19",
+    "pytest-cov>=6.0.0"
 ]
